--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="stormly"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBmZ8S-cAchMQrlzeEq6vG7qk2lFrAOmgY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
