--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.6.0
+  google_maps_flutter_android: ^2.7.0
+  intl: ^0.19.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
 
