--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  weather: ^3.1.1
 
 dev_dependencies:
   flutter_test:
