--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   firebase_core: ^2.29.0
   flutter:
     sdk: flutter
+  geocoding: ^3.0.0
   geolocator: ^11.0.0
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.6.0
   google_maps_flutter_android: ^2.7.0
+  http: ^1.2.1
   intl: ^0.19.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
