--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_maps_flutter_android: ^2.7.0
   http: ^1.2.1
   intl: ^0.19.0
+  lottie: ^3.1.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   weather: ^3.1.1
@@ -30,6 +31,7 @@ dev_dependencies:
 
 flutter:
   assets:
+    - assets/
     - assets/images/
 
   uses-material-design: true
